--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: Demonstrates how to use the flute_music_player plugin.
 dependencies:
   flutter:
     sdk: flutter
-
+environment:
+  sdk: '^3.2.0'
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
